modules/edw_themes/modules/edwt_backend/css/manage-documents.css
.accordion-button::after {
    display: flex;
    align-items: center;
    padding-inline-start: 12px;
    width: 19px;
    height: 19px;
    background-color: #ebff00;
    border-radius: 50px;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='64 64 896 896' focusable='false' data-icon='down-circle' width='1em' height='1em' fill='currentColor' aria-hidden='true'%3E%3Cpath d='M690 405h-46.9c-10.2 0-19.9 4.9-25.9 13.2L512 563.6 406.8 418.2c-6-8.3-15.6-13.2-25.9-13.2H334c-6.5 0-10.3 7.4-6.5 12.7l178 246c3.2 4.4 9.7 4.4 12.9 0l178-246c3.9-5.3.1-12.7-6.4-12.7z'%3E%3C/path%3E%3Cpath d='M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z'%3E%3C/path%3E%3C/svg%3E") !important;
}

.accordion {
    border: none !important;
}

.accordion-item {
    border-radius: 8px!important;
    background-color: #fff;
    margin: 5px 0;
    border: unset !important;
}

.accordion-button:not(.collapsed) {
    background-color: #cfe2ff00 !important;
    color: #000 !important;
}

.accordion-item:last-of-type>.accordion-header .accordion-button{
    font-size: 18px;
    font-weight: 400;
    text-transform: uppercase;
}

.view-display-id-in_session_order .gin-layer-wrapper,
.view-display-id-pre_session_order .gin-layer-wrapper {
    padding: 0 !important;
    box-sizing: unset !important;
    border: none !important;
    background: transparent !important;
    box-shadow: unset !important;
}

.view-display-id-in_session_order *:focus,
.view-display-id-pre_session_order *:focus {
    box-shadow: unset !important;
}

.view-display-id-in_session_order .dropbutton-widget .dropbutton--gin,
.view-display-id-pre_session_order .dropbutton-widget .dropbutton--gin {
    padding-left: 0;
}

